--- a/EMPLOYEE-SERVICE.properties
+++ b/EMPLOYEE-SERVICE.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.username=root
+spring.datasource.password=Shivaraj@28
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=8081
+spring.application.name=EMPLOYEE-SERVICE
+eureka.client.service-url.defaltZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
