--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -11,4 +11,4 @@ eureka.client.service-url.defaltZone=http://localhost:8761/eureka/
 
 eureka.instance.prefer-ip-address=true
 
-spring.boot.message=Hello Department Service
+spring.boot.message=Hello Department Service updated
